<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gor.gyumrimedicalcenter.login.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_cian">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="426dp"
        android:layout_below="@+id/toolbar_register"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="1dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:hint="@string/login" />

        <EditText

            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText

            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/surname_field"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:hint="@string/surname" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/editText"
                android:layout_toRightOf="@+id/editText"
                android:background="@drawable/calend"
                android:contentDescription="@string/selecteddata"
                android:cropToPadding="true" />
        </RelativeLayout>

        <EditText

            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile" />

        <EditText

            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:hint="@string/gmail" />

        <Button

            style="@style/button_field"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:onClick="onRegisterButtonClick1"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>
</ScrollView>