<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.gor.gyumrimedicalcenter.login.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_cian"
    >

    </android.support.v7.widget.Toolbar>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="115dp"-->
        <!--android:background="@drawable/login_form_background"-->
        <!--android:gravity="center"-->

        <!--android:orientation="vertical"-->
        <!--android:id="@+id/linearLayout"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->

    <EditText
        android:id="@+id/username_field"

        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_field"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginBottom="2dp"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password_field"

        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginBottom="68dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <!--</LinearLayout>-->

    <Button
        android:id="@+id/button2"
        style="@style/button_field"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginBottom="13dp"
        android:onClick="onLoginButtonClick"
        android:text="@string/Login" />

    <Button
        android:id="@+id/button"
        style="@style/button_field"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="82dp"
        android:onClick="onRegisterButtonClick"
        android:text="@string/registration" />
</RelativeLayout>